2012-10-30  JJ Allaire <jj@rstudio.org>

    * src/Attributes.cpp: factored parser into it's own file; eliminated 
    tranposition of roxygen comments.
    * src/AttributesParser.h: attributes parser header
    * src/AttributesParser.cpp: attributes parser implementation

2012-10-31  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/module/class.h: factored out of Module.h which started to 
        be too big. class_ gains a derives<Parent>( "Parent" ) for so that the 
        class inherits method that were exposed by its parent. 
        * include/Rcpp/Module.h: template class CppInheritedMethod for implementing
        inherited method
        * src/Module.cpp: get_class_pointer implementation
        
2012-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Rmath.h: Finalised adding Rmath functions

2012-10-30  JJ Allaire <jj@rstudio.org>

	* R/Attributes.R: new functions sourceCpp and compileAttributes that
	use C++11 style attributes (embedded in comments) to perform
	automatic generation of boilerplate marshaling code
	* src/Attributes.cpp: support functions for attribute handling
	* include/Rcpp/exceptions.h: file io exception classes
	* man/sourceCpp.Rd: documentation for sourceCpp
	* man/compileAttributes.Rd: documentation for compileAttributes
	* man/exportAttriute.Rd: documentation for export attribute
	* man/dependsAttribute.Rd: documentation for depends attribute
	* NAMESPACE: exports for sourceCpp and compileAttributes

2012-10-30  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/as.h: new bare_as to simplify uses of as
        * include/Rcpp/module/Module_generated_Factory.h: using bare_as
        * R/Module.R: promoting the show method
        * src/Attributes.cpp: remove g++ warning (int != size_t)

2012-10-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Rmath.h: More Rmath functions

2012-10-29  Romain Francois <romain@r-enthusiasts.com>

	* R/Module.R: Taking care of a check warning